# rustscript-studio

./: .gitignore  Cargo.toml  RSX_PARSER_LIMITATIONS.md  debug_test.html  rsc-test.toml  rsc.toml  rustscript.toml
crates/devtools/coverage/: Cargo.toml
crates/devtools/coverage/src/: collector.rs  data.rs  error.rs  lib.rs  map.rs  report.rs  reporter.rs
crates/devtools/coverage/src/reporters/: html.rs  json.rs  lcov.rs  mod.rs
crates/rsc-dnd/: Cargo.toml
crates/rsc-dnd/src/: collision.rs  context.rs  draggable.rs  droppable.rs  error.rs  lib.rs  sensors.rs  sortable.rs
crates/rsc-flow/: Cargo.toml
crates/rsc-flow/src/: canvas.rs  edge.rs  error.rs  layout.rs  lib.rs  node.rs  position.rs  viewport.rs
crates/rsc-studio/: Cargo.toml
crates/rsc-studio/src/: config.rs  designer.rs  entity.rs  export.rs  lib.rs  store.rs  template.rs
crates/rsc-studio/src/designer/: css.rs  navigation.rs
design/: styles.yaml  theme.yaml
docs/1_planning/: BACKLOG.md  framework-assessment.md
docs/2_specs/: README.md  RFC-001-async-lifecycle-hooks.md  RFC-002-persisted-signals.md  RFC-003-hashmap-iteration.md  RFC-004-parser-improvements.md
docs/5_testing/: testing_strategy.md
docs/planning/: BACKLOG.md  gap-value-analysis.md  implementation-plan.md
src/: app.rsx  main.rsx
src/components/: activity_bar.rsx  bottom_panel.rsx  button.rsx  checkbox.rsx  color_picker.rsx  component_style_editor.rsx  context_menu.rsx  flow_canvas.rsx  flow_edge.rsx  flow_node.rsx  header.rsx  icon.rsx  input.rsx  minimap.rsx  mod.rsx  modal.rsx  navigation_canvas.rsx  navigation_preview.rsx  panel.rsx  preset_layout_editor.rsx  select.rsx  shadow_editor.rsx  sidebar.rsx  spacing_editor.rsx  tabs.rsx  token_editor.rsx  token_preview.rsx  toolbar.rsx  tooltip.rsx  typography_editor.rsx  zoom_controls.rsx
src/hooks/: mod.rsx  store.rsx
src/pages/: css_designer.rsx  mod.rsx  navigation_designer.rsx  settings.rsx
tests/: e2e.rs
tests/e2e/: app-e2e.test.rsx  app_test.rs  browser_test.rs  css-designer-e2e.test.rsx  css_designer_test.rs  harness.rs  interactivity_test.rs  mod.rs  navigation-designer-e2e.test.rsx  navigation_designer_test.rs
