[package]
name = "rustscript-studio"
version = "0.1.0"
edition = "2024"
publish = false

[dev-dependencies]
rsc-test.workspace = true
tokio.workspace = true
chrono.workspace = true
urlencoding.workspace = true
serde_json.workspace = true

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[workspace]
resolver = "2"
members = [
    "crates/rsc-flow",
    "crates/rsc-dnd",
    "crates/rsc-studio",
    "crates/devtools/coverage",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sweengineeringlabs/rustscript-studio"
authors = ["SWE Engineering Labs <aden@sweengineeringlabs.com>"]

[workspace.dependencies]
# Internal crates
rsc-flow = { path = "crates/rsc-flow" }
rsc-dnd = { path = "crates/rsc-dnd" }
rsc-studio = { path = "crates/rsc-studio" }
rsc-coverage = { path = "crates/devtools/coverage" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Utilities
indexmap = { version = "2.0", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "2.0"

# Testing (browser automation via rsc-test abstraction)
# Note: Requires Chrome browser installed on the system
rsc-test = { path = "../rustscript/crates/tools/test", features = ["browser"] }
tokio = { version = "1.0", features = ["full", "test-util"] }
chrono = "0.4"
urlencoding = "2.1"
