[package]
name = "rsc-dnd"
description = "Drag and drop library for RustScript - dnd-kit equivalent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
