[package]
name = "rsc-flow"
description = "Graph visualization library for RustScript - React Flow equivalent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
