[package]
name = "rsc-studio"
description = "Core studio logic for RustScript Studio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rsc-flow = { workspace = true }
rsc-dnd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
chrono = { workspace = true }
urlencoding = { workspace = true }
